<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.2</version>
	</parent>

	<groupId>org.eclipse.store</groupId>
	<artifactId>bookstore-demo</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<name>EclipseStore BookStore Demo</name>

	<organization>
		<name>MicroStream Software</name>
		<url>https://microstream.one</url>
	</organization>

	<licenses>
		<license>
			<name>Eclipse Public License - v 2.0</name>
			<url>https://www.eclipse.org/legal/epl-2.0/</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>MicroStream Software</name>
			<url>https://microstream.one</url>
		</developer>
	</developers>

	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<license.inceptionYear>2023</license.inceptionYear>
		<license.licenseName>epl_only_v2</license.licenseName>
		<license.licenceFile>LICENSE</license.licenceFile>
		<eclipsestore.version>2.0.0</eclipsestore.version>
		<lucene.version>8.11.2</lucene.version>
		<vaadin.version>24.3.5</vaadin.version>
		<gigamap.version>1.0.0-beta1</gigamap.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<version>${vaadin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.store</groupId>
			<artifactId>storage-embedded</artifactId>
			<version>${eclipsestore.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.store</groupId>
			<artifactId>storage-embedded-configuration</artifactId>
			<version>${eclipsestore.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.serializer</groupId>
			<artifactId>persistence-binary-jdk8</artifactId>
			<version>${eclipsestore.version}</version>
		</dependency>
		<dependency>
			<groupId>one.microstream</groupId>
			<artifactId>gigamap</artifactId>
			<version>${gigamap.version}</version>
		</dependency>
		<dependency>
			<groupId>org.javamoney.moneta</groupId>
			<artifactId>moneta-core</artifactId>
			<version>1.4.2</version>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli-shell-jline3</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>1.0.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.yaml</groupId>
					<artifactId>snakeyaml</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>
		<dependency>
			<groupId>org.rapidpm</groupId>
			<artifactId>rapidpm-logger-adapter</artifactId>
			<version>01.00.10-RPM</version>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.parttio</groupId>
			<artifactId>line-awesome</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.graphql-java-kickstart</groupId>
			<artifactId>graphql-spring-boot-starter</artifactId>
			<version>15.0.0</version>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>spring-boot:run</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<!-- Clean build and startup time for Vaadin apps sometimes may
					exceed the default Spring Boot's 30sec timeout. -->
				<configuration>
					<wait>500</wait>
					<maxAttempts>240</maxAttempts>
					<mainClass>org.eclipse.store.demo.bookstore.VaadinApplication</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-maven-plugin</artifactId>
				<version>${vaadin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-frontend</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.2.0</version>
				<configuration>
					<includes>
						<include>**/*.java</include>
					</includes>
					<ignoreNoFileToScan>true</ignoreNoFileToScan>
				</configuration>
				<executions>
					<execution>
						<id>add-license</id>
						<phase>process-sources</phase>
						<goals>
							<goal>update-file-header</goal>
							<goal>update-project-license</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>production</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
							<mainClass>org.eclipse.store.demo.bookstore.VaadinApplication</mainClass>
						</configuration>
					</plugin>
					<plugin>
						<groupId>com.vaadin</groupId>
						<artifactId>vaadin-maven-plugin</artifactId>
						<version>${vaadin.version}</version>
						<executions>
							<execution>
								<goals>
									<goal>build-frontend</goal>
								</goals>
								<phase>compile</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
